feat(Language): add locale formatting option and update translations

--- a/src/utils/data/default_settings.json
+++ b/src/utils/data/default_settings.json
@@ -236,6 +236,10 @@
     "value": "{}"
   },
   {
+    "name": "localeFormatting",
+    "value": false
+  },
+  {
     "name": "offlineMode",
     "value": false
   },
