--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "dev": "vite",
     "dev:host": "vite --host",
     "translations": "cd scripts && node updatetranslations.cjs",
+    "translations:percentages": "node scripts/updateTranslationPercentages.cjs",
     "build": "vite build",
     "pretty": "prettier --write \"./**/*.{js,jsx,json,scss,css}\"",
     "lint": "eslint \"./src/**/*.{js,jsx}\" && stylelint \"./src/**/*.{scss,css}\"",
