Fix/beta workflow version check (#1131)
* fix(workflows): prevent beta release for non-beta versions

* fix(workflows): address copilot PR review feedback

- Support iterative beta versions (7.6.0-beta.1 -> 7.6.0-beta.2)
- Remove tag trigger from beta workflow to prevent premature releases
- Fix tag format in docs/summaries to include 'v' prefix
- Clarify deployment approval wording

--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - beta
-    tags:
-      - 'v*-beta.*'
 
 permissions:
   contents: write
@@ -39,6 +37,13 @@ jobs:
           VERSION=$(node -p "require('./package.json').version")
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Building version: $VERSION"
+          
+          # Check if this is actually a beta version
+          if [[ ! "$VERSION" =~ -beta\. ]]; then
+            echo "❌ Version $VERSION is not a beta version (must contain '-beta.')"
+            echo "Skipping beta release. Use Version Bump workflow to create a beta version first."
+            exit 1
+          fi
 
       - name: Generate changelog
         id: changelog
