--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -1,31 +1,18 @@
 name: Version Bump
 
 on:
-  workflow_dispatch:
-    inputs:
-      bump_type:
-        description: 'Version bump type'
-        required: true
-        type: choice
-        options:
-          - patch  # 7.5.0 -> 7.5.1 (bug fixes)
-          - minor  # 7.5.0 -> 7.6.0 (new features)
-          - major  # 7.5.0 -> 8.0.0 (breaking changes)
-      pre_release:
-        description: 'Pre-release label (leave empty for stable release)'
-        required: false
-        type: choice
-        options:
-          - ''
-          - beta
-          - rc
-          - alpha
+  pull_request:
+    types:
+      - closed
+    labels:
+      - 'release'
 
 permissions:
   contents: write
 
 jobs:
   bump-version:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -44,13 +31,19 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
+      - name: Extract bump info from PR
+        id: bump_info
+        run: |
+          BUMP_TYPE=$(echo "${{ github.event.pull_request.body }}" | grep -oP "bump: \K(major|minor|patch)" || echo "patch")
+          IS_RELEASE=$(echo "${{ github.event.pull_request.body }}" | grep -q "is_release: true" && echo "true" || echo "false")
+          
+          echo "bump_type=$BUMP_TYPE" >> $GITHUB_OUTPUT
+          echo "is_release=$IS_RELEASE" >> $GITHUB_OUTPUT
+
       - name: Calculate new version
         id: version
         run: |
           CURRENT_VERSION=$(node -p "require('./package.json').version")
-          echo "Current version: $CURRENT_VERSION"
-          
-          # Remove any pre-release suffix for base version
           BASE_VERSION=$(echo $CURRENT_VERSION | sed 's/-.*$//')
           IFS='.' read -r -a VERSION_PARTS <<< "$BASE_VERSION"
           
@@ -58,85 +51,75 @@ jobs:
           MINOR="${VERSION_PARTS[1]}"
           PATCH="${VERSION_PARTS[2]}"
           
-          # If requesting a pre-release and current is already a pre-release, keep base version
-          # Otherwise, bump the version based on type
-          if [ -n "${{ github.event.inputs.pre_release }}" ] && [ "$IS_PRERELEASE" = "true" ]; then
-            # Keep existing base version for iterative betas (7.6.0-beta.1 -> 7.6.0-beta.2)
-            NEW_VERSION="$BASE_VERSION"
-          else
-            # Bump version based on type
-            case "${{ github.event.inputs.bump_type }}" in
-              major)
-                MAJOR=$((MAJOR + 1))
-                MINOR=0
-                PATCH=0
-                ;;
-              minor)
-                MINOR=$((MINOR + 1))
-                PATCH=0
-                ;;
-              patch)
-                PATCH=$((PATCH + 1))
-                ;;
-            esac
-            
-            NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
-          fi
+          case "${{ steps.bump_info.outputs.bump_type }}" in
+            major)
+              MAJOR=$((MAJOR + 1))
+              MINOR=0
+              PATCH=0
+              ;;
+            minor)
+              MINOR=$((MINOR + 1))
+              PATCH=0
+              ;;
+            patch)
+              PATCH=$((PATCH + 1))
+              ;;
+          esac
           
-          # Add pre-release label if specified
-          if [ -n "${{ github.event.inputs.pre_release }}" ]; then
-            # Get beta number by counting existing beta tags for this version
-            BETA_COUNT=$(git tag -l "v${NEW_VERSION}-${{ github.event.inputs.pre_release }}.*" | wc -l)
+          NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+          
+          # Add pre-release suffix if NOT a production release AND NOT on main branch
+          if [ "${{ steps.bump_info.outputs.is_release }}" != "true" ] && [ "${{ github.ref_name }}" != "main" ]; then
+            BETA_COUNT=$(git tag -l "v${NEW_VERSION}-beta.*" | wc -l)
             BETA_NUM=$((BETA_COUNT + 1))
-            NEW_VERSION="${NEW_VERSION}-${{ github.event.inputs.pre_release }}.${BETA_NUM}"
+            NEW_VERSION="${NEW_VERSION}-beta.${BETA_NUM}"
           fi
           
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
-          echo "New version will be: $NEW_VERSION"
 
       - name: Update package.json
-        run: |
-          bun x json -I -f package.json -e "this.version='${{ steps.version.outputs.new_version }}'"
+        run: bun x json -I -f package.json -e "this.version='${{ steps.version.outputs.new_version }}'"
 
       - name: Update Chrome manifest
-        run: |
-          VERSION_WITHOUT_PRERELEASE=$(echo "${{ steps.version.outputs.new_version }}" | sed 's/-.*$//')
-          bun x json -I -f manifest/chrome.json -e "this.version='${VERSION_WITHOUT_PRERELEASE}'"
+        run: bun x json -I -f manifest/chrome.json -e "this.version='${{ steps.version.outputs.new_version }}'"
 
       - name: Update Firefox manifest
-        run: |
-          VERSION_WITHOUT_PRERELEASE=$(echo "${{ steps.version.outputs.new_version }}" | sed 's/-.*$//')
-          bun x json -I -f manifest/firefox.json -e "this.version='${VERSION_WITHOUT_PRERELEASE}'"
+        run: bun x json -I -f manifest/firefox.json -e "this.version='${{ steps.version.outputs.new_version }}'"
 
       - name: Update Safari manifest
-        run: |
-          VERSION_WITHOUT_PRERELEASE=$(echo "${{ steps.version.outputs.new_version }}" | sed 's/-.*$//')
-          bun x json -I -f safari/Mue\ Extension/Resources/manifest.json -e "this.version='${VERSION_WITHOUT_PRERELEASE}'"
+        run: bun x json -I -f safari/Mue\ Extension/Resources/manifest.json -e "this.version='${{ steps.version.outputs.new_version }}'"
 
-      - name: Update Safari Xcode project
-        run: |
-          VERSION_WITHOUT_PRERELEASE=$(echo "${{ steps.version.outputs.new_version }}" | sed 's/-.*$//')
-          sed -i "s/MARKETING_VERSION = [^;]*/MARKETING_VERSION = ${VERSION_WITHOUT_PRERELEASE}/g" safari/Mue.xcodeproj/project.pbxproj
+      - name: Update Safari Xcode (4 MARKETING_VERSION entries)
+        run: sed -i '' "s/MARKETING_VERSION = [^;]*/MARKETING_VERSION = ${{ steps.version.outputs.new_version }}/g" safari/Mue.xcodeproj/project.pbxproj
 
       - name: Update constants.js
-        run: |
-          sed -i "s/export const VERSION = '[^']*'/export const VERSION = '${{ steps.version.outputs.new_version }}'/" src/config/constants.js
+        run: sed -i '' "s/export const VERSION = '[^']*'/export const VERSION = '${{ steps.version.outputs.new_version }}'/" src/config/constants.js
 
-      - name: Commit version bump
+      - name: Commit and tag
         run: |
           git add package.json manifest/chrome.json manifest/firefox.json safari/Mue\ Extension/Resources/manifest.json safari/Mue.xcodeproj/project.pbxproj src/config/constants.js
           git commit -m "chore: bump version to ${{ steps.version.outputs.new_version }}"
           git tag -a "v${{ steps.version.outputs.new_version }}" -m "Release v${{ steps.version.outputs.new_version }}"
-
-      - name: Push changes
-        run: |
           git push origin ${{ github.ref_name }}
           git push origin "v${{ steps.version.outputs.new_version }}"
+
+      - name: Auto back-merge (main only)
+        if: github.ref_name == 'main'
+        run: |
+          git fetch origin
+          git checkout beta
+          git merge --no-ff origin/main -m "chore: back-merge main into beta"
+          git push origin beta
+          
+          git checkout dev
+          git merge --no-ff origin/beta -m "chore: back-merge beta into dev"
+          git push origin dev
 
       - name: Summary
         run: |
           echo "✅ Version bumped to ${{ steps.version.outputs.new_version }}" >> $GITHUB_STEP_SUMMARY
-          echo "📦 Tag created: v${{ steps.version.outputs.new_version }}" >> $GITHUB_STEP_SUMMARY
+          echo "📦 Tag: v${{ steps.version.outputs.new_version }}" >> $GITHUB_STEP_SUMMARY
+          echo "🔀 Branch: ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### Files updated:" >> $GITHUB_STEP_SUMMARY
           echo "- package.json" >> $GITHUB_STEP_SUMMARY
@@ -145,3 +128,9 @@ jobs:
           echo "- safari/Mue Extension/Resources/manifest.json" >> $GITHUB_STEP_SUMMARY
           echo "- safari/Mue.xcodeproj/project.pbxproj" >> $GITHUB_STEP_SUMMARY
           echo "- src/config/constants.js" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ github.ref_name }}" = "main" ]; then
+            echo "### 🔄 Auto back-merge:" >> $GITHUB_STEP_SUMMARY
+            echo "- main → beta ✅" >> $GITHUB_STEP_SUMMARY
+            echo "- beta → dev ✅" >> $GITHUB_STEP_SUMMARY
+          fi
